<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>org.codeprimate.build</groupId>
  <artifactId>build-parent</artifactId>
  <version>${revision}</version>
  <packaging>pom</packaging>

  <name>Codeprimate Build</name>
  <description>
    Codeprimate Build Parent is the Maven parent project for all Codeprimate software projects
    using Apache Maven to build and release Codeprimate software.
  </description>
  <url>https://github.com/codeprimate-software/cp-build</url>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
      <comments>
        Copyright 2011-present the original author or authors.

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
        implied. See the License for the specific language governing
        permissions and limitations under the License.
      </comments>
    </license>
    <license>
      <name>Codeprimate License, Version 1.0</name>
      <url>http://www.codeprimate.org/licenses/LICENSE-1.0</url>
      <comments>
        Copyright (c) 2011-Present. Codeprimate, LLC and Authors. All Rights Reserved.

        This software is licensed under the Codeprimate End User License Agreement (EULA).
        This software is proprietary and confidential in addition to an intellectual asset
        of the aforementioned authors.

        By using the software, the end-user implicitly consents to and agrees to be in compliance
        with all terms and conditions of the EULA. Failure to comply with the EULA will result in
        the maximum penalties permissible by law.

        In short, this software may not be reverse engineered, reproduced, copied, modified
        or distributed without prior authorization of the aforementioned authors, permissible
        and expressed only in writing. The authors grant the end-user non-exclusive, non-negotiable
        and non-transferable use of the software "as is" without expressed or implied WARRANTIES,
        EXTENSIONS or CONDITIONS of any kind.

        For further information on the software license, the end user is encouraged to read
        the EULA @ ...
      </comments>
    </license>
  </licenses>

  <organization>
    <name>Codeprimate, LLC</name>
    <url>http://www.codeprimate.org/</url>
  </organization>

  <developers>
    <developer>
      <id>jxblum</id>
      <name>John J. Blum</name>
      <email>john dot blum at codeprimate dot org</email>
      <organization>Codeprimate, LLC</organization>
      <organizationUrl>http://www.codeprimate.org</organizationUrl>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git@github.com:codeprimate-software/cp-build.git</connection>
    <developerConnection>scm:git:git@github.com:codeprimate-software/cp-build.git</developerConnection>
    <url>https://github.com/codeprimate-software/cp-build</url>
  </scm>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/codeprimate-software/cp-build/issues</url>
  </issueManagement>

  <distributionManagement>
    <repository>
      <id>central</id>
      <name>Maven Central Repository</name>
      <url>https://central.sonatype.com</url>
    </repository>
  </distributionManagement>

  <modules>
    <module>cp-build-tools</module>
    <module>maven-build</module>
    <module>starters</module>
  </modules>

  <properties>
    <java.version>21</java.version>
    <java-next.version>25</java-next.version>
    <central-publishing-maven-plugin.version>0.11.0</central-publishing-maven-plugin.version>
    <flatten-maven-plugin.version>1.7.3</flatten-maven-plugin.version>
    <gpg.keyname>Codeprimate Software</gpg.keyname>
    <maven.version>3.9.16</maven.version>
    <maven-deploy-plugin.version>3.1.4</maven-deploy-plugin.version>
    <maven-enforcer-plugin.version>3.6.3</maven-enforcer-plugin.version>
    <maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
    <maven-release-plugin.version>3.3.1</maven-release-plugin.version>
    <revision>3.0.0-SNAPSHOT</revision>
  </properties>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>${maven-deploy-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-enforcer-plugin</artifactId>
            <version>${maven-enforcer-plugin.version}</version>
            <executions>
              <execution>
                <id>enforce-maven-build-environment</id>
                <goals>
                  <goal>enforce</goal>
                </goals>
                <configuration>
                  <rules>
                    <requireJavaVersion>
                      <!-- Enforce strict Java version on release. -->
                      <version>[${java.version},${java-next.version})</version>
                    </requireJavaVersion>
                  </rules>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-deploy-plugin</artifactId>
          </plugin>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>flatten-maven-plugin</artifactId>
            <version>${flatten-maven-plugin.version}</version>
            <inherited>true</inherited>
            <executions>
              <execution>
                <id>flatten</id>
                <phase>process-resources</phase>
                <goals>
                  <goal>flatten</goal>
                </goals>
                <configuration>
                  <flattenMode>oss</flattenMode>
                  <updatePomFile>true</updatePomFile>
                  <pomElements>
                    <parent>expand</parent>
                    <profiles>keep</profiles>
                    <repositories>remove</repositories>
                  </pomElements>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>${maven-gpg-plugin.version}</version>
            <configuration>
              <keyname>${gpg.keyname}</keyname>
            </configuration>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <!-- See https://central.sonatype.org/publish/publish-portal-maven/ -->
          <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
            <version>${central-publishing-maven-plugin.version}</version>
            <extensions>true</extensions>
            <configuration>
              <publishingServerId>central</publishingServerId>
              <autoPublish>false</autoPublish>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>auto-release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-release-plugin</artifactId>
            <version>${maven-release-plugin.version}</version>
            <configuration>
              <autoVersionSubmodules>true</autoVersionSubmodules>
              <useReleaseProfile>false</useReleaseProfile>
              <releaseProfiles>release</releaseProfiles>
              <goals>deploy</goals>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
